--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="description" content="Móveis ecológicos">
     <meta name="keywords" content="moveis ecologicos">
     <link rel="stylesheet" type="text/css" href="principal.css">
-    <script type="text/javascript" src="principal.js"></script>
+    <script type="text/javascript" src="js/principal.js"></script>
     <title>Móveis Ecológicos</title>
   </head>
   <body onload="trocaBanner();">
