Alterado o index.html

--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@ css/bootstrap.min.css">
         <li class="list-group-item">
           Móveis de papelão
         </li>
+        <li class="list-group-item">
+          Móveis de sucata
+        </li>
       </ul>
     </div>
   </div>
