--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
 		<meta name="keywords" content="moveis ecologicos">
 		<link rel="stylesheet" href="estilos/estilos.css">
 		<title>Móveis Ecológicos</title>
+		<script src="principal.js"></script>
 	</head>
 	<body>
+		<h2 id="mensagem"></h2>
 		<h1>Móveis Ecológicos S. A.</h1>
 		<ul>
 			<li>Móveis de garrafas PET</li>
