Adicionado um item na lista

--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
 					<li class="list-group-item">
 						Móveis de papelão
 					</li>
+					<li class="list-group-item">
+						Móveis de plásticos
+					</li>
 				</ul>
 			</div>
 		</div>
