--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
 					<li class="list-group-item">
 						Móveis de plásticos
 					</li>
+					<li class="list-group-item">
+						Móveis de metal
+					</li>
 				</ul>
 			</div>
 		</div>
